+plugin.yml: animalprotect.bypass-Permission hinzugefuegt.

--- a/plugin.yml
+++ b/plugin.yml
@@ -18,3 +18,6 @@ permissions:
   animalprotect.protect:
     default: true
     description: desc.
+  animalprotect.bypass:
+    default: false
+    description: desc.
