--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: AnimalProtect
-main: de.Fear837.Main
+main: de.AnimalProtect.Main
 version: 0.1
 authors: [Fear837, Pingebam]
 website: www.craftolution.de
