--- a/plugin.yml
+++ b/plugin.yml
@@ -9,6 +9,11 @@ commands:
       usage: Write /<command>
       permission: animalprotect.protect
       permission-message: You don't have permission.
+   unlockanimal:
+      description: Entsichert ein Entity aus der Datenbank.
+      usage: Write /<command>
+      permission: animalprotect.protect
+      permission-message: You don't have permission.
    lockinfo:
       description: Gibt Informationen ueber ein Entity.
       usage: Write /<command>
