--- a/plugin.yml
+++ b/plugin.yml
@@ -43,6 +43,11 @@ commands:
       usage: Write /<command> <name>
       permission: animalprotect.protect
       permission-message: You don't have permission.
+   ap:
+      description: Gesamtuebersicht aller AnimalProtect-Befehle.
+      usage: Write /<command>
+      permission: animalprotect.protect
+      permission-message: You don't have permission.
 permissions:
   animalprotect.protect:
     default: true
