*commands: Argumente verbessert.
Bei den Befehlen /locklist, /lockrespawn, /locktp kann man jetzt
einfacher die Argumente angeben.

--- a/plugin.yml
+++ b/plugin.yml
@@ -26,12 +26,12 @@ commands:
       permission-message: You don't have permission.
    lockrespawn:
       description: Spawnt das ausgewaehlte Tier neu.
-      usage: Write /<command> [id] [owner]
+      usage: Write /<command> [owner] [id]
       permission: animalprotect.admin
       permission-message: You don't have permission.
    locktp:
       description: Teleportiert dich zu einem Tier.
-      usage: Write /<command> [id] [owner]
+      usage: Write /<command> [owner] [id]
       permission: animalprotect.admin
       permission-message: You don't have permission.
    lockdebug:
