--- a/src/config.yml
+++ b/src/config.yml
@@ -35,14 +35,14 @@ messages:
   TOO_MANY_ARGUMENTS: '%cFehler: Es wurden zu viele Argumente angegeben.'
   
   SELECTED_NONE: '%cFehler: Du hast zurzeit noch kein Tier ausgewaehlt!'
-  SELECTED_COW: 'Du hast eine §6Kuh §eausgewählt. %7(/lockanimal um sie zu protecten.)'
-  SELECTED_PIG: 'Du hast ein §6Schwein §eausgewählt. §7(/lockanimal um es zu protecten.)'
-  SELECTED_CHICKEN: 'Du hast ein §6Huhn §eausgewählt. §7(/lockanimal um es zu protecten.)'
-  SELECTED_HORSE: 'Du hast ein §6Pferd §eausgewählt. §7(/lockanimal um es zu protecten.)'
-  SELECTED_WOLF: 'Du hast einen §6Wolf §eausgewählt. §7(/lockanimal um ihn zu protecten.)'
-  SELECTED_SHEEP: 'Du hast ein §6Schaf §eausgewählt. §7(/lockanimal um es zu protecten.)'
-  SELECTED_IRONGOLEM: 'Du hast einen §6Iron Golem §eausgewählt. §7(/lockanimal um ihn zu protecten.)'
-  SELECTED_SNOWMAN: 'Du hast einen §6Schneemann §eausgewählt. §7(/lockanimal um ihn zu protecten.)'
-  SELECTED_VILLAGER: 'Du hast einen §6Villager §eausgewählt. §7(/lockanimal um ihn zu protecten.)'
-  SELECTED_OCELOT: 'Du hast einen §6Ozelot §eausgewählt. §7(/lockanimal um ihn zu protecten.)'
-  SELECTED_UNKNOWN: 'Du hast ein §6unbekanntes §eTier ausgewählt. §7(/lockanimal um es zu protecten.)'
+  SELECTED_COW: 'Du hast eine %6Kuh %eausgewählt. %7(/lockanimal um sie zu protecten.)'
+  SELECTED_PIG: 'Du hast ein %6Schwein %eausgewählt. %7(/lockanimal um es zu protecten.)'
+  SELECTED_CHICKEN: 'Du hast ein %6Huhn %eausgewählt. %7(/lockanimal um es zu protecten.)'
+  SELECTED_HORSE: 'Du hast ein %6Pferd %eausgewählt. %7(/lockanimal um es zu protecten.)'
+  SELECTED_WOLF: 'Du hast einen %6Wolf %eausgewählt. %7(/lockanimal um ihn zu protecten.)'
+  SELECTED_SHEEP: 'Du hast ein %6Schaf %eausgewählt. %7(/lockanimal um es zu protecten.)'
+  SELECTED_IRONGOLEM: 'Du hast einen %6Iron Golem %eausgewählt. %7(/lockanimal um ihn zu protecten.)'
+  SELECTED_SNOWMAN: 'Du hast einen %6Schneemann %eausgewählt. %7(/lockanimal um ihn zu protecten.)'
+  SELECTED_VILLAGER: 'Du hast einen %6Villager %eausgewählt. %7(/lockanimal um ihn zu protecten.)'
+  SELECTED_OCELOT: 'Du hast einen %6Ozelot %eausgewählt. %7(/lockanimal um ihn zu protecten.)'
+  SELECTED_UNKNOWN: 'Du hast ein %6unbekanntes %eTier ausgewählt. %7(/lockanimal um es zu protecten.)'
