+.gitignore: Ignore-Liste aktualisiert

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ src/de/Vip/vip_Commands.java
 src/de/Vip/vip_Main.java
 .settings/org.eclipse.jdt.core.prefs
 out.jardesc
+.settings/org.eclipse.ltk.core.refactoring.prefs
