--- a/src/config.yml
+++ b/src/config.yml
@@ -43,7 +43,7 @@ messages:
   TOO_MANY_ARGUMENTS: '%cFehler: Es wurden zu viele Argumente angegeben.'
   
   HELP_HEADER: 'AnimalProtect Help (1/1)'
-  HELP_DESC: '%7%oEine Übersicht aller AnimalProtect-Kommandos'
+  HELP_DESC: '%7%oEine Uebersicht aller AnimalProtect-Kommandos'
   HELP_NOT_AVAILABLE: '%cDie Hilfe von AnimalProtect ist zurzeit nicht verfügbar.'
   
   RELOAD_SUCCESS_PLUGIN: '%aDas Plugin wurde erfolgreich neu geladen.'
