--- a/src/config.yml
+++ b/src/config.yml
@@ -3,6 +3,7 @@ settings:
   use-queue-task: true
   queue-tick-delay: 200
   debug-messages: true
+  max-entities-per-chunk: 25
 messages:
   LOCK_SUCCESS: '%aDas Tier wurde erfolgreich gesichert.'
   LOCK_FAILED: '%cFehler: Das Tier konnte nicht gesichert werden.'
