*AnimalProtect: Aufgeräumt und dokumentiert.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -69,7 +69,7 @@ commands:
       usage: Schreibe /lockedanimals <spieler>
       permission: animalprotect.default
       permission-message: '&cDu hast nicht genuegend Rechte fuer diesen Befehl.'
-      aliases: [locklimit]
+      aliases: [locklimit, animallimit]
 permissions:
   animalprotect.default:
     default: true
