*Ignore eml & iml

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ src/de/Vip/vip_Main.java
 .settings/org.eclipse.jdt.core.prefs
 out.jardesc
 .settings/org.eclipse.ltk.core.refactoring.prefs
+AnimalProtect.eml
+AnimalProtect.iml
